# 180DB

./: #Makefile#  #main.c#  #training_data_new.c#  .#Makefile  .#main.c  .#training_data_new.c  .Makefile.un~  .main.c.un~  .training_data_new.c.un~  Makefile  Makefile~  README.md  classifiers.c  constants.c  constants.h  consumer.c  main  main.c  main.c~  neural_network.h  producer.c  prompt_collect.c  prompt_collect.c~  prompt_collect.h  test_neural_network.c  training_data_new.c  training_data_new.c~  training_data_new.h
Real_Time_may_09/: CMakeLists.txt  activities_testing.txt  classifiers.c  classifiers.h  constants.c  constants.h  features.c  main.c  producer.c  save.c  strides.c  test_neural_network.c  training_file.c  trial.c  turning_file.c
Real_Time_may_09/Train_Data_Set_AA/: activities_AA_training.txt  jump_AA_training.txt  run_AA_training.txt  stairs_down_AA_training.txt  stairs_up_AA_training.txt  turning_file_AA.txt  walk_AA_training.txt
Working_System/: CMakeLists.txt  Makefile~  classifiers.c  constants.c  constants.c~  constants.h  constants.h~  consumer.c  features.c  main.c  process.c  strides.c  test_neural_network.c  training_file.c  turning_file.c
Working_System/May_30_turning_improved/: classifiers.c  classifiers.h  constants.c  constants.h  features.c  main.c  test_neural_network.c  train_neural_network.c  turning_file.c
Working_System/Train_Data_Set_AA/: .test_neural_network.c.un~  activities_AA_training.txt  jump_AA_training.txt  medium_slow_stairs_up_AA.csv  run_AA_training.txt  s.csv  stairs_down_AA_training.txt  test_AA_1494472322.csv  (+8 more)
(+264 files in other folders)
